(chat) fixed dialog toolbar alignment issues

--- a/src/app/main/apps/contacts/dialogs/contact/contact-dialog.scss
+++ b/src/app/main/apps/contacts/dialogs/contact/contact-dialog.scss
@@ -5,20 +5,18 @@ md-dialog {
         width: 400px;
 
         md-toolbar {
+            height: 240px;
             min-height: 240px;
+            max-height: 240px;
 
             .title {
                 font-size: 17px;
             }
 
-            .md-toolbar-tools-top {
-                height: 64px;
-                min-height: 64px;
-            }
-
             .md-toolbar-tools-middle {
-                height: inherit;
-                max-height: none;
+                height: 144px;
+                min-height: 144px;
+                max-height: 144px;
 
                 .contact-avatar {
                     margin: 0;
